# freedesktop

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/projects/: 2025-01-15_desktop-entry-parser-and-testing.md
freedesktop/: Cargo.toml
freedesktop-apps/: Cargo.toml  README.md
freedesktop-apps/src/: lib.rs  parser.rs
freedesktop-apps/tests/: edge_case_tests.rs  execute_tests.rs  id_tests.rs  localization_tests.rs  parser_tests.rs
freedesktop-apps/tests/fixtures/: boolean_test.desktop  comments_and_whitespace.desktop  complete_app.desktop  complex_localization.desktop  dbus_activatable.desktop  directory_entry.directory  escape_sequences.desktop  link_entry.desktop  malformed_missing_required.desktop  malformed_no_group.desktop  minimal_app.desktop  numeric_test.desktop
freedesktop-cli/: Cargo.toml
freedesktop-cli/src/: main.rs
freedesktop-core/: Cargo.toml  README.md
freedesktop-core/src/: info.rs
freedesktop/src/: lib.rs
scripts/: publish.sh
src/: core.rs  lib.rs
