[package]
name = "freedesktop-apps"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
freedesktop-core = { version = "0.1.0", path = "../freedesktop-core" }
regex = "1.11.2"
libc = "0.2"
